[package]
name = "backtrace-rust"
version = "0.1.0"
authors = ["laurentiustefan97 <steflaurentiu@gmail.com>"]
license = "MIT/Apache-2.0"
readme = "README.md"
repository = "https://github.com/laurentiustefan97/backtrace-rust" 
homepage = "https://github.com/laurentiustefan97/backtrace-rust"
description = """
A library written in Rust with no C dependency to acquire stack trace (backtrace) at runtime in a Rust program.
"""
edition = "2018"

[features]
logging = []

[dependencies]
gimli = "0.21"
object = "0.17"
memmap = "0.7"
addr2line = "0.12"
rustc-demangle = "0.1"
